--- a/ur3e_robotiq_config/config/sensors_realsense_depthmap.yaml
+++ b/ur3e_robotiq_config/config/sensors_realsense_depthmap.yaml
@@ -2,10 +2,11 @@ sensors:
   - sensor_plugin: occupancy_map_monitor/DepthImageOctomapUpdater
     image_topic: /camera/depth/image_rect_raw
     queue_size: 5
+    point_subsample: 1
     near_clipping_plane_distance: 0.3
     far_clipping_plane_distance: 2.5
     shadow_threshold: 0.2
     padding_scale: 3.0
     padding_offset: 0.03
-    max_update_rate: 5.0
+    max_update_rate: 30.0
     filtered_cloud_topic: filtered_cloud
