--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,5 +70,9 @@
         "iomanip": "cpp",
         "streambuf": "cpp",
         "variant": "cpp"
-    }
+    },
+    "python.analysis.extraPaths": [
+        "/home/armine/Codes/ROS/UR_ws/devel/lib/python3/dist-packages",
+        "/opt/ros/noetic/lib/python3/dist-packages"
+    ]
 }
